# zmu

./: .gitignore  Cargo.toml  Dockerfile  README.md  buildall.sh  run_tests_internal.sh  test_arm-cmsis-dsp.sh  test_coremark.sh  test_cortex-m-rtic.sh  test_faults.sh  test_gcc.sh  test_lilos.sh  test_rustbook.sh  testall.bat  testall.sh  zmu.code-workspace
.github/workflows/: rust.yml
doc/: jit.md  scb_fault_status_plan.md  todo.md  working_with_instructions.md
scripts/: install_arm_gcc.sh  profile_coremark_callgrind.sh  test_output.sh
src/: app.rs  condition.rs  core.rs  decoder.rs  executor.rs  instruction.rs  lib.rs  main.rs  main_cortex_m0.rs  main_cortex_m0plus.rs  main_cortex_m3.rs  main_cortex_m4.rs  main_cortex_m4f.rs  main_cortex_m7_d16.rs  main_cortex_m7_sp_d16.rs  main_stm32f103.rs  memory.rs  operation.rs  register.rs  semihost.rs  trace.rs
src/bus/: ahblite.rs  busmatrix.rs  internal.rs  mod.rs  ram.rs
src/core/: executor.rs  instruction.rs  mod.rs  operation.rs  register.rs
src/decoder/: add.rs  adr.rs  b.rs  bl.rs  blx.rs  bx.rs  cmp.rs  ldr.rs  ldrb.rs  mod.rs  mov.rs  pop.rs  push.rs  str.rs  sub.rs  tst.rs
src/device/: mod.rs  stm32f1xx.rs
src/memory/: flash.rs  mod.rs  ram.rs
src/semihosting/: mod.rs
tests/: common.ld  rules.mk
tests/cmsis/: Makefile  handlerCM0.S  handlerCM3.S  initialization.c  link.ld
tests/coremark/: core_portme.c  core_portme.h  core_portme.mak  link.ld
tests/fault-test-bench/: Makefile  main.c
tests/hello_world/: Makefile  hello_world.c  hello_world.ewd  hello_world.ewp  hello_world.eww  link.ld  main.c
tests/hello_world_itm/: Makefile  link.ld  main.c
tests/instruction-test-bench/: Makefile  link.ld  main.c
tests/minimal/: Makefile  link.ld  main.c
tests/pi/: Makefile  link.ld  main.c
zmu-cortex-m/: Cargo.toml
zmu-cortex-m/src/: lib.rs
zmu-cortex-m/src/bus/: busmatrix.rs
zmu-cortex-m/src/core/: condition.rs  instruction.rs  operation.rs  register.rs
zmu-cortex-m/src/decoder/: add.rs  blx.rs  bx.rs  lsl.rs  pop.rs  str.rs  tst.rs
zmu_cortex_m/: Cargo.toml  README.md  build.rs
zmu_cortex_m/scripts/: decoder.txt  generate_decode16.py  generate_decode32.py
zmu_cortex_m/src/: lib.rs
zmu_cortex_m/src/bus/: ahblite.rs  busmatrix.rs  internal.rs  mod.rs
zmu_cortex_m/src/bus/system_region/: mod.rs
zmu_cortex_m/src/bus/system_region/ppb/: dwt.rs  itm.rs  mod.rs  nvic.rs  nvic_tests.rs  scb.rs  systick.rs
zmu_cortex_m/src/core/: bits.rs  condition.rs  exception.rs  executor.rs  fault.rs  fetch.rs  fpregister.rs  instruction.rs  mod.rs  monitor.rs  operation.rs  register.rs  reset.rs  thumb.rs
zmu_cortex_m/src/decoder/: adc.rs  add.rs  adr.rs  and.rs  asr.rs  b.rs  bfc.rs  bfi.rs  bic.rs  bkpt.rs  bl.rs  blx.rs  bx.rs  cbz.rs  clrex.rs  clz.rs  cmn.rs  cmp.rs  control.rs  cpd.rs  cps.rs  dbg.rs  decoder_tests.rs  dmb.rs  dsb.rs  eor.rs  isb.rs  it.rs  ldc.rs  ldm.rs  ldr.rs  ldrb.rs  ldrh.rs  ldrsb.rs  ldrsh.rs  lsl.rs  lsr.rs  mcr.rs  mla.rs  mls.rs  (+70 more)
zmu_cortex_m/src/decoder/decoder_tests/: branch_control.rs  data_proc.rs  floating_point.rs  fundamentals.rs  load_store.rs  mod.rs  multiply_divide.rs  saturation_pack_misc.rs  system_barrier.rs
zmu_cortex_m/src/device/: generic.rs  mod.rs  stm32f1xx.rs
zmu_cortex_m/src/device/cortex_m/: cortex_m0.rs  mod.rs
zmu_cortex_m/src/executor/: adc.rs  add_with_carry.rs  bitoper.rs  boole_algebra.rs  branch.rs  coproc.rs  divide.rs  exception.rs  fp_data_processing.rs  fp_generic.rs  fp_load_and_store.rs  fp_register_transfer.rs  load_and_store.rs  load_and_store_multiple.rs  misc.rs  misc_data_processing.rs  mod.rs  multiply.rs  packing.rs  parallel_add.rs  shift.rs  signed_multiply.rs  status_register.rs  std_data_processing.rs
zmu_cortex_m/src/gdb/: conn.rs  mod.rs  server.rs  simulation.rs  target.rs
zmu_cortex_m/src/memory/: flash.rs  map.rs  mod.rs  ram.rs
zmu_cortex_m/src/peripheral/: dwt.rs  itm.rs  mod.rs  mpu.rs  nvic.rs  nvic_tests.rs  scb.rs  scid.rs  systick.rs
zmu_cortex_m/src/semihosting/: mod.rs
zmu_cortex_m/src/system/: mod.rs  simulation.rs
