[package]
name = "zmu"
version = "0.1.0"
authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
edition = "2024"

[dependencies]
zmu_cortex_m = {path =  "zmu_cortex_m"}
clap = "4.5"
tabwriter = "1.4"
goblin = "0.10"
pad = "0.1.6"
stderrlog = "0.6"
log = "0.4.28"
anyhow = "1.0.100"


[features]
default = ["armv7m", "generic-device"]


armv6m = ["zmu_cortex_m/armv6m"]
armv7m = ["zmu_cortex_m/armv7m"]
armv7em = ["zmu_cortex_m/armv7em"]
generic-device = ["zmu_cortex_m/generic-device"]
stm32f103 = ["zmu_cortex_m/stm32f103"]
