[package]
name = "zmu"
version = "0.1.0"
authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
edition = "2024"
autobins = false
default-run = "zmu-cortex-m4f"

[dependencies]
zmu_cortex_m = { path = "zmu_cortex_m", default-features = false }
clap = "4.5"
tabwriter = "1.4"
goblin = "0.10"
pad = "0.1.6"
log = "0.4.28"
anyhow = "1.0.100"


[features]
default = ["cortex-m4f"]

# Product-oriented emulator targets.
cortex-m0 = ["armv6m", "generic-device"]
cortex-m0plus = ["armv6m", "generic-device"]
cortex-m3 = ["armv7m", "generic-device"]
cortex-m4 = ["armv7em", "generic-device"]
cortex-m4f = ["armv7em", "generic-device", "fpv4-sp-d16"]
cortex-m7-d16 = ["armv7em", "generic-device", "fpv5-d16"]
cortex-m7-sp-d16 = ["armv7em", "generic-device", "fpv5-sp-d16"]
stm32f103 = ["armv7m"]

# Lower-level capability flags used by product aliases and direct library builds.
armv6m = ["zmu_cortex_m/armv6m"]
armv7m = ["zmu_cortex_m/armv7m"]
armv7em = ["zmu_cortex_m/armv7em"]
fpv4-sp-d16 = ["zmu_cortex_m/fpv4-sp-d16"]
fpv5-sp-d16 = ["zmu_cortex_m/fpv5-sp-d16"]
fpv5-d16 = ["zmu_cortex_m/fpv5-d16"]
generic-device = []

[[bin]]
name = "zmu-cortex-m0"
path = "src/main_cortex_m0.rs"
required-features = ["cortex-m0"]

[[bin]]
name = "zmu-cortex-m0plus"
path = "src/main_cortex_m0plus.rs"
required-features = ["cortex-m0plus"]

[[bin]]
name = "zmu-cortex-m3"
path = "src/main_cortex_m3.rs"
required-features = ["cortex-m3"]

[[bin]]
name = "zmu-cortex-m4"
path = "src/main_cortex_m4.rs"
required-features = ["cortex-m4"]

[[bin]]
name = "zmu-cortex-m4f"
path = "src/main_cortex_m4f.rs"
required-features = ["cortex-m4f"]

[[bin]]
name = "zmu-cortex-m7-d16"
path = "src/main_cortex_m7_d16.rs"
required-features = ["cortex-m7-d16"]

[[bin]]
name = "zmu-cortex-m7-sp-d16"
path = "src/main_cortex_m7_sp_d16.rs"
required-features = ["cortex-m7-sp-d16"]

[[bin]]
name = "zmu-stm32f103"
path = "src/main_stm32f103.rs"
required-features = ["stm32f103"]
