[package]
name = "zmu_cortex_m"
version = "0.1.0"
authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
edition = "2021"

[dependencies]
byteorder = "1"
enum-set = "0.0.8"
gdbstub = "0.7"
gdbstub_arch = "0.3"
log = "0.4"
num-bigfloat = { version = "1.7.1", default-features = false, features = ['std'] }


[features]
VFPSmallRegisterBank = []
armv6m = []
armv7m = ["VFPSmallRegisterBank"]
armv7em = ["VFPSmallRegisterBank"]
generic-device = []
stm32f103 = []
