[package]
name = "zmu_cortex_m"
version = "0.1.0"
authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
edition = "2024"

[dependencies]
byteorder = "1.5"
enum-set = "0.0.8"
gdbstub = "0.7.8"
gdbstub_arch = "0.3.2"
log = "0.4.28"
num-bigfloat = { version = "1.7.2", default-features = false, features = ['std'] }
thiserror = "2.0.17"


[features]
VFPSmallRegisterBank = []
armv6m = []
armv7m = ["VFPSmallRegisterBank"]
armv7em = ["VFPSmallRegisterBank"]
generic-device = []
stm32f103 = []
